--- a/views/index.html
+++ b/views/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="/css/styles.css" />
     <script src="/js/libs/leaflet.js"></script>
     <script src="/js/libs/socket.io.js"></script>
+    <script src="/js/libs/jquery.min.js"></script>
     <script src="/js/app.js"></script>
 </head>
 <body>
-...........
+    <div id="result">...</div>
 </body>
 </html>
