display user info

--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/leaflet.css" />
     <script src="/js/libs/leaflet.js"></script>
     <script src="/js/libs/socket.io.js"></script>
     <script src="/js/libs/jquery.min.js"></script>
@@ -11,5 +12,6 @@
 </head>
 <body>
     <div id="result">...</div>
+    <div id="mapid" style="width: 600px; height: 400px"></div>
 </body>
 </html>
