fix redraw issue

--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
     <div id="result">...</div>
-    <div id="mapid" style="width: 600px; height: 400px"></div>
+    <div id="maparea">
+        <div id="mapid" style="width: 600px; height: 400px"></div>
+    </div>
 </body>
 </html>
